# cs140-lib

./: CMakeLists.txt
scripts/: syncthefork.py  updatesubmodules.py
